# KitoDo

./: .gitignore  LICENSE.md  README.md  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
.github/workflows/: release-appimage.yml
electron/: main.cjs  preload.cjs
packaging/appimage/: io.github.KitotsuMolina.KitoDo.desktop
packaging/aur/: .SRCINFO  PKGBUILD  README.md  kitodo.desktop
packaging/flatpak/: README.md  io.github.KitotsuMolina.KitoDo.desktop  io.github.KitotsuMolina.KitoDo.metainfo.xml  io.github.KitotsuMolina.KitoDo.yml  prepare.sh
scripts/: build-appimage.sh  bump-version.sh  install-local.sh  sync-tauri-icon.sh  uninstall-local.sh
src/: app.css  app.d.ts
src-tauri/: Cargo.toml  kitodo-backup-2026-04-08T08-48-42.json  kitodo-backup-2026-04-08T08-55-12.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_init.sql  002_indexes.sql  003_qol_sort_recurrence.sql  004_qol_sort_recurrence_indexes.sql  005_rebuild_tasks_fk.sql  006_indexes_hardening.sql  007_github_local_first.sql  008_github_local_first_indexes.sql
src-tauri/src/: cli.rs  lib.rs  main.rs
src-tauri/src/commands/: github.rs  tasks.rs
src-tauri/src/db/: migrations.rs  mod.rs  models.rs  repo.rs
src-tauri/src/integrations/github/: client.rs  mod.rs  models.rs  rules.rs  sync.rs
src/lib/api/: desktop.ts  tauri.ts
src/lib/components/: BackupModal.svelte  ConfirmModal.svelte  GithubModal.svelte  HeaderBar.svelte  HelpModal.svelte  QuickGuideCard.svelte  SidebarFilters.svelte  TaskActionsContent.svelte  (+1 more)
src/routes/: +page.svelte
(+6 files in other folders)
