[package]
name = "kitodo"
version = "0.6.6"
description = "KitoDo v0.4"
authors = ["kitotsu"]
license = "MIT"
edition = "2021"
rust-version = "1.77"
default-run = "kitodo-server"

[dependencies]
anyhow = "1"
axum = "0.7"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
keyring = "3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal"] }
uuid = { version = "1", features = ["v7", "serde"] }
